--- a/Sample shurjoPay SDK Test/app/build.gradle
+++ b/Sample shurjoPay SDK Test/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     //
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation files("libs/sp-sdk-v-2.1.6.aar")
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    implementation files("libs/sp-sdk-v2.1.7.aar")
 }
