Update shurjoPay SDK gradle file

--- a/sdk-v2/settings.gradle
+++ b/sdk-v2/settings.gradle
@@ -7,5 +7,5 @@ dependencyResolutionManagement {
     }
 }
 //rootProject.name = "ShurjoPaySdkV2"
-include ':app'
-include ':sdk-v2'
+include ":app"
+include ":sdk-v2"
